--- a/6-graphics/metal/2015/2015-607-whats-new-in-metal-part-2/607-2-mps.md
+++ b/6-graphics/metal/2015/2015-607-whats-new-in-metal-part-2/607-2-mps.md
@@ -2,11 +2,8 @@
 ## [Metal Performance Shaders](607-2-mps.md) | Anna Tikhonova | 2815 | p165
 
 
-A framework of data-parallel algorithms for the GPU
-
-CPU-style library for the GPU
-
-
+- A framework of data-parallel algorithms for the GPU
+- CPU-style library for the GPU
 - Optimized for iOS
 - Available in iOS 9 for the A8 processor
 - Designed to integrate easily into your  Metal applications
@@ -15,7 +12,7 @@ CPU-style library for the GPU
 
 ### Supported image operators
 
-- Histogram, Equalization, and Specification
+- Histogram, Equalization, and Specification [`MPSImageHistogram`](https://developer.apple.com/documentation/metalperformanceshaders/mpsimagehistogram) [`MPSImageHistogramSpecification`](https://developer.apple.com/documentation/metalperformanceshaders/mpsimagehistogramspecification)
 - Morphology—Min, Max, Dilate, and Erode
 - Lanczos Resampling
 - Median
@@ -24,7 +21,7 @@ CPU-style library for the GPU
 - Convolution—General, Gaussian Blur, Box, Tent, and Sobel
 
 
-Use a ‘blur’ filter
+### Use a ‘blur’ filter
 
 ```
 // Create a filter object
@@ -38,7 +35,17 @@ MPSImageGaussianBlur *blurFilter =
     destination: destinationTexture];
 ```    
 
+- Command Buffer 
+  - Draw
+  - Draw
+  - Draw
+  - Dispatch Kernel
+  - Dispatch Kernel
+  - Encode MPS ‘Blur’ 
+  - Commit
 
+
+ 
 
 ### Download Sample Code
 
@@ -66,6 +73,7 @@ Filter properties
 ### In-place Operation
 
 How?
+
 ```
 // Encode filter in-place in a Metal command buffer
 [blurFilter encodeToCommandBuffer: commandBuffer
